add to cart feature

--- a/src/products.html
+++ b/src/products.html
@@ -18,45 +18,9 @@
 		</div>
 
 		<div id="main">
-			<div id="products">
-				<!-- THIS SECTION WOULD BE DYNAMIC -->
-				<!-- <div id="product-101" class="product">
-					<img src="images/football.png" />
-					<h3 class="title"><a href="#">Product 101</a></h3>
-					<span>Price: $150.00</span>
-					<a class="add-to-cart" href="#">Add To Cart</a>
-				</div> -->
+			<div id="products"></div>
 
-				<!-- <div id="product-101" class="product">
-					<img src="images/tennis.png" />
-					<h3 class="title"><a href="#">Product 102</a></h3>
-					<span>Price: $120.00</span>
-					<a class="add-to-cart" href="#">Add To Cart</a>
-				</div> -->
-
-				<!-- <div id="product-101" class="product">
-					<img src="images/basketball.png" />
-					<h3 class="title"><a href="#">Product 103</a></h3>
-					<span>Price: $90.00</span>
-					<a class="add-to-cart" href="#">Add To Cart</a>
-				</div> -->
-
-				<!-- <div id="product-101" class="product">
-					<img src="images/table-tennis.png" />
-					<h3 class="title"><a href="#">Product 104</a></h3>
-					<span>Price: $110.00</span>
-					<a class="add-to-cart" href="#">Add To Cart</a>
-				</div> -->
-
-				<!-- <div id="product-101" class="product">
-					<img src="images/soccer.png" />
-					<h3 class="title"><a href="#">Product 105</a></h3>
-					<span>Price: $80.00</span>
-					<a class="add-to-cart" href="#">Add To Cart</a>
-				</div> -->
-
-				<!-- DYNAMIC SECTION ENDS HERE -->
-			</div>
+			<div id="cart"></div>
 		</div>
 
 		<div id="footer">
