--- a/src/products.html
+++ b/src/products.html
@@ -4,7 +4,6 @@
 		<title>Products</title>
 		<link href="style.css" type="text/css" rel="stylesheet" />
 	</head>
-
 	<body>
 		<div id="header">
 			<h1 id="logo">Logo</h1>
@@ -16,13 +15,23 @@
 				</ul>
 			</nav>
 		</div>
-
 		<div id="main">
 			<div id="products"></div>
 
-			<div id="cart"></div>
+			<div id="cart">
+				<h2 id="cart-title">Cart</h2>
+				<table id="cart-table">
+					<tr>
+						<th>Product ID</th>
+						<th>Product Name</th>
+						<th>Product Price</th>
+						<th>Product Quantity</th>
+						<th>Remove</th>
+					</tr>
+				</table>
+				<h3 id="total-price">Price: $0.00</h3>
+			</div>
 		</div>
-
 		<div id="footer">
 			<nav>
 				<ul id="footer-links">
