empty cart feature

--- a/src/products.html
+++ b/src/products.html
@@ -20,16 +20,15 @@
 
 			<div id="cart">
 				<h2 id="cart-title">Cart</h2>
+				<button id="btn">Empty Cart</button>
 				<table id="cart-table">
 					<tr>
 						<th>Product ID</th>
 						<th>Product Name</th>
 						<th>Product Price</th>
 						<th>Product Quantity</th>
-						<th>Remove</th>
 					</tr>
 				</table>
-				<h3 id="total-price">Price: $0.00</h3>
 			</div>
 		</div>
 		<div id="footer">
